--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyparsing==3.0.9
 pytest==7.1.2
 pytest-base-url==2.0.0
 pytest-playwright==0.3.0
+pytest-rerunfailures==10.2
 python-slugify==6.1.2
 requests==2.28.1
 text-unidecode==1.3
